[gd_scene load_steps=17 format=4 uid="uid://bih3ocj8xduvk"]

[ext_resource type="Script" path="res://scenes/levels/the_canopy.gd" id="1_pjnxt"]
[ext_resource type="PackedScene" uid="uid://dvy50cse08105" path="res://characters/D_salmon/salmon_player.tscn" id="2_md2rj"]
[ext_resource type="TileSet" uid="uid://dc7uviqi0tg3d" path="res://assets/tile sets/cartoon_grass_tileset_01.tres" id="3_2oly3"]
[ext_resource type="Texture2D" uid="uid://eylxbsngnxls" path="res://assets/tile sets/TreeTrunks_Thick_01.png" id="4_b4sxu"]
[ext_resource type="PackedScene" uid="uid://blraawx5l42n3" path="res://scenes/hazards/spikes/spikes_01.tscn" id="5_5bfkp"]
[ext_resource type="PackedScene" uid="uid://n6hm846usv51" path="res://scenes/platforms/trees/tree_platform_01.tscn" id="5_fmdtm"]
[ext_resource type="PackedScene" uid="uid://dp17i4behyrdh" path="res://scenes/platforms/cave/medium/medium_water_cave_plat_01.tscn" id="7_30qhp"]
[ext_resource type="Texture2D" uid="uid://dg5rpenqi5mx0" path="res://assets/sky boxes/Sky.png" id="8_tap5r"]
[ext_resource type="Texture2D" uid="uid://dgx2wc4u0c2ja" path="res://assets/sky boxes/Tiling_Trees.png" id="9_7aje4"]
[ext_resource type="Shader" path="res://shaders/gaussian_blur.gdshader" id="10_5myi2"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rl3g0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hoefh"]
texture = ExtResource("4_b4sxu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_r4obp"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_hoefh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v80t5"]
shader = ExtResource("10_5myi2")
shader_parameter/sigma = 3.3

[sub_resource type="Gradient" id="Gradient_fw1x8"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t8plu"]
gradient = SubResource("Gradient_fw1x8")

[node name="The_Canopy" type="Node2D"]
script = ExtResource("1_pjnxt")

[node name="D_Salmon" parent="." instance=ExtResource("2_md2rj")]
position = Vector2(120, -424)

[node name="Tilemap_Container" type="Node" parent="."]

[node name="Grass_Layer" type="TileMapLayer" parent="Tilemap_Container"]
tile_map_data = PackedByteArray("AAAHAPv/AQAHAAAAAAAHAPz/AQAHAAEAAAAHAP3/AQAHAAEAAAAHAP7/AQAHAAEAAAAHAP//AQAHAAEAAAAGAPv/AQAGAAAAAAAFAPv/AQAGAAAAAAAEAPv/AQAGAAAAAAADAPv/AQAGAAAAAAACAPv/AQAGAAAAAAABAPv/AQAGAAAAAAAAAPv/AQAGAAAAAAAGAPz/AQAGAAEAAAAGAP3/AQAGAAIAAAAFAPz/AQAGAAEAAAAFAP3/AQAGAAIAAAAEAPz/AQAGAAEAAAAEAP3/AQAGAAIAAAADAPz/AQAGAAEAAAADAP3/AQAGAAIAAAACAPz/AQAGAAEAAAACAP3/AQAGAAIAAAABAPz/AQAGAAEAAAABAP3/AQAGAAIAAAAAAPz/AQAGAAEAAAAAAP3/AQAGAAIAAAAAAP7/AQAGAAEAAAAAAP//AQAGAAIAAAABAP7/AQAGAAEAAAABAP//AQAGAAIAAAACAP7/AQAGAAEAAAACAP//AQAGAAIAAAADAP7/AQAGAAEAAAADAP//AQAGAAIAAAAEAP7/AQAGAAEAAAAEAP//AQAGAAIAAAAFAP7/AQAGAAEAAAAFAP//AQAGAAIAAAAGAP7/AQAGAAEAAAAGAP//AQAGAAIAAAA=")
tile_set = ExtResource("3_2oly3")

[node name="Water_Container" type="Node" parent="."]

[node name="Platform_Container" type="Node" parent="."]

[node name="Water_Platforms" type="Node" parent="Platform_Container"]

[node name="Medium_Water_Cave_Plat_01" parent="Platform_Container/Water_Platforms" instance=ExtResource("7_30qhp")]
position = Vector2(2159, -359)

[node name="Tree_Platform_01" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(410, -263)

[node name="Tree_Platform_02" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(762, -236)

[node name="Tree_Platform_03" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(555, -488)

[node name="Tree_Platform_04" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(983, -552)

[node name="Tree_Platform_05" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1095, -145)

[node name="Tree_Platform_06" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1391, -254)

[node name="Tree_Platform_07" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1361, -552)

[node name="Tree_Platform_08" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1803, -59)

[node name="Tree_Platform_09" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1948, -257)

[node name="Tree_Platform_10" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1819, -478)

[node name="Tree_Platform_11" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1596, -692)

[node name="Tree_Platform_12" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(779, -759)

[node name="Tree_Platform_13" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(2117, -612)

[node name="Tree_Platform_14" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1869, -866)

[node name="Tree_Platform_15" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(1327, -837)

[node name="Tree_Platform_16" parent="Platform_Container" instance=ExtResource("5_fmdtm")]
position = Vector2(510, -936)

[node name="Hazards_Container" type="Node" parent="."]

[node name="Kill_Plane" type="Area2D" parent="Hazards_Container"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazards_Container/Kill_Plane"]
shape = SubResource("WorldBoundaryShape2D_rl3g0")

[node name="Spikes_01" parent="Hazards_Container" instance=ExtResource("5_5bfkp")]
z_index = 1
position = Vector2(1077, -169)

[node name="Checkpoint_Container" type="Node" parent="."]

[node name="Spawn" type="Node2D" parent="Checkpoint_Container"]
position = Vector2(118, -417)

[node name="Coin_Container" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Tree_Layer_01" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TreeTrunk_Layer_Background" type="TileMapLayer" parent="ParallaxBackground/Tree_Layer_01"]
z_index = -1
tile_map_data = PackedByteArray("AAALAP3/AQABAAAAAAALAP7/AQABAAEAAAALAP//AQABAAIAAAAMAP3/AQACAAAAAAAMAP7/AQACAAIAAAAMAP//AQACAAIAAAALAPr/AQABAAAAAAALAPv/AQABAAEAAAALAPz/AQABAAIAAAAMAPr/AQACAAAAAAAMAPv/AQACAAIAAAAMAPz/AQACAAIAAAALAPf/AQABAAAAAAALAPj/AQABAAEAAAALAPn/AQABAAIAAAAMAPf/AQACAAAAAAAMAPj/AQACAAIAAAAMAPn/AQACAAIAAAALAPT/AQABAAAAAAALAPX/AQABAAEAAAALAPb/AQABAAIAAAAMAPT/AQACAAAAAAAMAPX/AQACAAIAAAAMAPb/AQACAAIAAAAIAPT/AQAAAAAAAAAIAPX/AQAAAAEAAAAIAPb/AQAAAAIAAAAIAPf/AQAAAAAAAAAIAPj/AQAAAAEAAAAIAPn/AQAAAAIAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAEAAAAIAPz/AQAAAAIAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAEAAAAIAP//AQAAAAIAAAAKAPT/AQABAAAAAAAKAPX/AQABAAEAAAAKAPb/AQABAAIAAAAKAPf/AQABAAAAAAAKAPj/AQABAAEAAAAKAPn/AQABAAIAAAAKAPr/AQABAAAAAAAKAPv/AQABAAEAAAAKAPz/AQABAAIAAAAKAP3/AQABAAAAAAAKAP7/AQABAAEAAAAKAP//AQABAAIAAAAJAPT/AQABAAAAAAAJAPX/AQABAAEAAAAJAPb/AQABAAIAAAAJAPf/AQABAAAAAAAJAPj/AQABAAEAAAAJAPn/AQABAAIAAAAJAPr/AQABAAAAAAAJAPv/AQABAAEAAAAJAPz/AQABAAIAAAAJAP3/AQABAAAAAAAJAP7/AQABAAEAAAAJAP//AQABAAIAAAAQAP//AQAAAAIAAAARAP//AQABAAIAAAASAP//AQABAAIAAAATAP//AQABAAIAAAAUAP//AQABAAIAAAAVAP//AQABAAIAAAAWAP//AQABAAIAAAAXAP//AQABAAIAAAAYAP//AQACAAIAAAAQAP7/AQAAAAIAAAARAP7/AQABAAIAAAASAP7/AQABAAIAAAATAP7/AQABAAIAAAAUAP7/AQABAAIAAAAVAP7/AQABAAIAAAAWAP7/AQABAAIAAAAXAP7/AQABAAIAAAAYAP7/AQACAAIAAAAQAP3/AQAAAAIAAAARAP3/AQABAAIAAAASAP3/AQABAAIAAAATAP3/AQABAAIAAAAUAP3/AQABAAIAAAAVAP3/AQABAAIAAAAWAP3/AQABAAIAAAAXAP3/AQABAAIAAAAYAP3/AQACAAIAAAAQAPz/AQAAAAIAAAARAPz/AQABAAIAAAASAPz/AQABAAIAAAATAPz/AQABAAIAAAAUAPz/AQABAAIAAAAVAPz/AQABAAIAAAAWAPz/AQABAAIAAAAXAPz/AQABAAIAAAAYAPz/AQACAAIAAAAQAPv/AQAAAAIAAAARAPv/AQABAAIAAAASAPv/AQABAAIAAAATAPv/AQABAAIAAAAUAPv/AQABAAIAAAAVAPv/AQABAAIAAAAWAPv/AQABAAIAAAAXAPv/AQABAAIAAAAYAPv/AQACAAIAAAAQAPr/AQAAAAIAAAARAPr/AQABAAIAAAASAPr/AQABAAIAAAATAPr/AQABAAIAAAAUAPr/AQABAAIAAAAVAPr/AQABAAIAAAAWAPr/AQABAAIAAAAXAPr/AQABAAIAAAAYAPr/AQACAAIAAAAQAPn/AQAAAAIAAAARAPn/AQABAAIAAAASAPn/AQABAAIAAAATAPn/AQABAAIAAAAUAPn/AQABAAIAAAAVAPn/AQABAAIAAAAWAPn/AQABAAIAAAAXAPn/AQABAAIAAAAYAPn/AQACAAIAAAAQAPj/AQAAAAIAAAARAPj/AQABAAIAAAASAPj/AQABAAIAAAATAPj/AQABAAIAAAAUAPj/AQABAAIAAAAVAPj/AQABAAIAAAAWAPj/AQABAAIAAAAXAPj/AQABAAIAAAAYAPj/AQACAAIAAAAQAPf/AQAAAAIAAAARAPf/AQABAAIAAAASAPf/AQABAAIAAAATAPf/AQABAAIAAAAUAPf/AQABAAIAAAAVAPf/AQABAAIAAAAWAPf/AQABAAIAAAAXAPf/AQABAAIAAAAYAPf/AQACAAIAAAAQAPb/AQAAAAIAAAARAPb/AQABAAIAAAASAPb/AQABAAIAAAATAPb/AQABAAIAAAAUAPb/AQABAAIAAAAVAPb/AQABAAIAAAAWAPb/AQABAAIAAAAXAPb/AQABAAIAAAAYAPb/AQACAAIAAAAQAPX/AQAAAAIAAAARAPX/AQABAAIAAAASAPX/AQABAAIAAAATAPX/AQABAAIAAAAUAPX/AQABAAIAAAAVAPX/AQABAAIAAAAWAPX/AQABAAIAAAAXAPX/AQABAAIAAAAYAPX/AQACAAIAAAAQAPT/AQAAAAIAAAARAPT/AQABAAIAAAASAPT/AQABAAIAAAATAPT/AQABAAIAAAAUAPT/AQABAAIAAAAVAPT/AQABAAIAAAAWAPT/AQABAAIAAAAXAPT/AQABAAIAAAAYAPT/AQACAAIAAAAQAPP/AQAAAAIAAAARAPP/AQABAAIAAAASAPP/AQABAAIAAAATAPP/AQABAAIAAAAUAPP/AQABAAIAAAAVAPP/AQABAAIAAAAWAPP/AQABAAIAAAAXAPP/AQABAAIAAAAYAPP/AQACAAIAAAAdAP//AQAAAAIAAAAeAP//AQABAAIAAAAfAP//AQABAAIAAAAgAP//AQABAAIAAAAhAP//AQACAAIAAAAdAP7/AQAAAAIAAAAeAP7/AQABAAIAAAAfAP7/AQABAAIAAAAgAP7/AQABAAIAAAAhAP7/AQACAAIAAAAdAP3/AQAAAAIAAAAeAP3/AQABAAIAAAAfAP3/AQABAAIAAAAgAP3/AQABAAIAAAAhAP3/AQACAAIAAAAdAPz/AQAAAAIAAAAeAPz/AQABAAIAAAAfAPz/AQABAAIAAAAgAPz/AQABAAIAAAAhAPz/AQACAAIAAAAdAPv/AQAAAAIAAAAeAPv/AQABAAIAAAAfAPv/AQABAAIAAAAgAPv/AQABAAIAAAAhAPv/AQACAAIAAAAdAPr/AQAAAAIAAAAeAPr/AQABAAIAAAAfAPr/AQABAAIAAAAgAPr/AQABAAIAAAAhAPr/AQACAAIAAAAdAPn/AQAAAAIAAAAeAPn/AQABAAIAAAAfAPn/AQABAAIAAAAgAPn/AQABAAIAAAAhAPn/AQACAAIAAAAdAPj/AQAAAAIAAAAeAPj/AQABAAIAAAAfAPj/AQABAAIAAAAgAPj/AQABAAIAAAAhAPj/AQACAAIAAAAdAPf/AQAAAAIAAAAeAPf/AQABAAIAAAAfAPf/AQABAAIAAAAgAPf/AQABAAIAAAAhAPf/AQACAAIAAAAdAPb/AQAAAAIAAAAeAPb/AQABAAIAAAAfAPb/AQABAAIAAAAgAPb/AQABAAIAAAAhAPb/AQACAAIAAAAdAPX/AQAAAAIAAAAeAPX/AQABAAIAAAAfAPX/AQABAAIAAAAgAPX/AQABAAIAAAAhAPX/AQACAAIAAAAdAPT/AQAAAAIAAAAeAPT/AQABAAIAAAAfAPT/AQABAAIAAAAgAPT/AQABAAIAAAAhAPT/AQACAAIAAAAdAPP/AQAAAAIAAAAeAPP/AQABAAIAAAAfAPP/AQABAAIAAAAgAPP/AQABAAIAAAAhAPP/AQACAAIAAAAdAPL/AQAAAAIAAAAeAPL/AQABAAIAAAAfAPL/AQABAAIAAAAgAPL/AQABAAIAAAAhAPL/AQACAAIAAAAIAPP/AQAAAAIAAAAJAPP/AQABAAIAAAAKAPP/AQABAAIAAAALAPP/AQABAAIAAAAMAPP/AQACAAIAAAAIAPL/AQAAAAIAAAAJAPL/AQABAAIAAAAKAPL/AQABAAIAAAALAPL/AQABAAIAAAAMAPL/AQACAAIAAAAIAPH/AQAAAAIAAAAJAPH/AQABAAIAAAAKAPH/AQABAAIAAAALAPH/AQABAAIAAAAMAPH/AQACAAIAAAAQAO7/AQAAAAIAAAAQAO//AQAAAAIAAAAQAPD/AQAAAAIAAAAQAPH/AQAAAAIAAAAQAPL/AQAAAAIAAAARAO7/AQABAAIAAAARAO//AQABAAIAAAARAPD/AQABAAIAAAARAPH/AQABAAIAAAARAPL/AQABAAIAAAASAO7/AQABAAIAAAASAO//AQABAAIAAAASAPD/AQABAAIAAAASAPH/AQABAAIAAAASAPL/AQABAAIAAAATAO7/AQABAAIAAAATAO//AQABAAIAAAATAPD/AQABAAIAAAATAPH/AQABAAIAAAATAPL/AQABAAIAAAAUAO7/AQABAAIAAAAUAO//AQABAAIAAAAUAPD/AQABAAIAAAAUAPH/AQABAAIAAAAUAPL/AQABAAIAAAAVAO7/AQABAAIAAAAVAO//AQABAAIAAAAVAPD/AQABAAIAAAAVAPH/AQABAAIAAAAVAPL/AQABAAIAAAAWAO7/AQABAAIAAAAWAO//AQABAAIAAAAWAPD/AQABAAIAAAAWAPH/AQABAAIAAAAWAPL/AQABAAIAAAAXAO7/AQABAAIAAAAXAO//AQABAAIAAAAXAPD/AQABAAIAAAAXAPH/AQABAAIAAAAXAPL/AQABAAIAAAAYAO7/AQACAAIAAAAYAO//AQACAAIAAAAYAPD/AQACAAIAAAAYAPH/AQACAAIAAAAYAPL/AQACAAIAAAAQAOn/AQAAAAIAAAAQAOr/AQAAAAIAAAAQAOv/AQAAAAIAAAAQAOz/AQAAAAIAAAAQAO3/AQAAAAIAAAARAOn/AQABAAIAAAARAOr/AQABAAIAAAARAOv/AQABAAIAAAARAOz/AQABAAIAAAARAO3/AQABAAIAAAASAOn/AQABAAIAAAASAOr/AQABAAIAAAASAOv/AQABAAIAAAASAOz/AQABAAIAAAASAO3/AQABAAIAAAATAOn/AQABAAIAAAATAOr/AQABAAIAAAATAOv/AQABAAIAAAATAOz/AQABAAIAAAATAO3/AQABAAIAAAAUAOn/AQABAAIAAAAUAOr/AQABAAIAAAAUAOv/AQABAAIAAAAUAOz/AQABAAIAAAAUAO3/AQABAAIAAAAVAOn/AQABAAIAAAAVAOr/AQABAAIAAAAVAOv/AQABAAIAAAAVAOz/AQABAAIAAAAVAO3/AQABAAIAAAAWAOn/AQABAAIAAAAWAOr/AQABAAIAAAAWAOv/AQABAAIAAAAWAOz/AQABAAIAAAAWAO3/AQABAAIAAAAXAOn/AQABAAIAAAAXAOr/AQABAAIAAAAXAOv/AQABAAIAAAAXAOz/AQABAAIAAAAXAO3/AQABAAIAAAAYAOn/AQACAAIAAAAYAOr/AQACAAIAAAAYAOv/AQACAAIAAAAYAOz/AQACAAIAAAAYAO3/AQACAAIAAAAIAPD/AQAAAAIAAAAJAPD/AQABAAIAAAAKAPD/AQABAAIAAAALAPD/AQABAAIAAAAMAPD/AQACAAIAAAAIAO//AQAAAAIAAAAJAO//AQABAAIAAAAKAO//AQABAAIAAAALAO//AQABAAIAAAAMAO//AQACAAIAAAAIAO7/AQAAAAIAAAAJAO7/AQABAAIAAAAKAO7/AQABAAIAAAALAO7/AQABAAIAAAAMAO7/AQACAAIAAAAIAO3/AQAAAAIAAAAJAO3/AQABAAIAAAAKAO3/AQABAAIAAAALAO3/AQABAAIAAAAMAO3/AQACAAIAAAAIAOz/AQAAAAIAAAAJAOz/AQABAAIAAAAKAOz/AQABAAIAAAALAOz/AQABAAIAAAAMAOz/AQACAAIAAAAIAOv/AQAAAAIAAAAJAOv/AQABAAIAAAAKAOv/AQABAAIAAAALAOv/AQABAAIAAAAMAOv/AQACAAIAAAAIAOr/AQAAAAIAAAAJAOr/AQABAAIAAAAKAOr/AQABAAIAAAALAOr/AQABAAIAAAAMAOr/AQACAAIAAAAIAOn/AQAAAAIAAAAJAOn/AQABAAIAAAAKAOn/AQABAAIAAAALAOn/AQABAAIAAAAMAOn/AQACAAIAAAAdAPH/AQAAAAIAAAAeAPH/AQABAAIAAAAfAPH/AQABAAIAAAAgAPH/AQABAAIAAAAhAPH/AQACAAIAAAAdAPD/AQAAAAIAAAAeAPD/AQABAAIAAAAfAPD/AQABAAIAAAAgAPD/AQABAAIAAAAhAPD/AQACAAIAAAAdAO//AQAAAAIAAAAeAO//AQABAAIAAAAfAO//AQABAAIAAAAgAO//AQABAAIAAAAhAO//AQACAAIAAAAdAO7/AQAAAAIAAAAeAO7/AQABAAIAAAAfAO7/AQABAAIAAAAgAO7/AQABAAIAAAAhAO7/AQACAAIAAAAdAO3/AQAAAAIAAAAeAO3/AQABAAIAAAAfAO3/AQABAAIAAAAgAO3/AQABAAIAAAAhAO3/AQACAAIAAAAdAOz/AQAAAAIAAAAeAOz/AQABAAIAAAAfAOz/AQABAAIAAAAgAOz/AQABAAIAAAAhAOz/AQACAAIAAAAdAOv/AQAAAAIAAAAeAOv/AQABAAIAAAAfAOv/AQABAAIAAAAgAOv/AQABAAIAAAAhAOv/AQACAAIAAAAdAOr/AQAAAAIAAAAeAOr/AQABAAIAAAAfAOr/AQABAAIAAAAgAOr/AQABAAIAAAAhAOr/AQACAAIAAAAdAOn/AQAAAAIAAAAeAOn/AQABAAIAAAAfAOn/AQABAAIAAAAgAOn/AQABAAIAAAAhAOn/AQACAAIAAAA=")
tile_set = SubResource("TileSet_r4obp")

[node name="Tree_Layer_02" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.8, 1)

[node name="TreeTrunk_Layer_Background2" type="TileMapLayer" parent="ParallaxBackground/Tree_Layer_02"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
z_index = -2
position = Vector2(314, 16)
scale = Vector2(0.75, 0.75)
tile_map_data = PackedByteArray("AAALAP3/AQABAAAAAAALAP7/AQABAAEAAAALAP//AQABAAIAAAAMAP3/AQACAAAAAAAMAP7/AQACAAIAAAAMAP//AQACAAIAAAALAPr/AQABAAAAAAALAPv/AQABAAEAAAALAPz/AQABAAIAAAAMAPr/AQACAAAAAAAMAPv/AQACAAIAAAAMAPz/AQACAAIAAAALAPf/AQABAAAAAAALAPj/AQABAAEAAAALAPn/AQABAAIAAAAMAPf/AQACAAAAAAAMAPj/AQACAAIAAAAMAPn/AQACAAIAAAALAPT/AQABAAAAAAALAPX/AQABAAEAAAALAPb/AQABAAIAAAAMAPT/AQACAAAAAAAMAPX/AQACAAIAAAAMAPb/AQACAAIAAAAIAPT/AQAAAAAAAAAIAPX/AQAAAAEAAAAIAPb/AQAAAAIAAAAIAPf/AQAAAAAAAAAIAPj/AQAAAAEAAAAIAPn/AQAAAAIAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAEAAAAIAPz/AQAAAAIAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAEAAAAIAP//AQAAAAIAAAAKAPT/AQABAAAAAAAKAPX/AQABAAEAAAAKAPb/AQABAAIAAAAKAPf/AQABAAAAAAAKAPj/AQABAAEAAAAKAPn/AQABAAIAAAAKAPr/AQABAAAAAAAKAPv/AQABAAEAAAAKAPz/AQABAAIAAAAKAP3/AQABAAAAAAAKAP7/AQABAAEAAAAKAP//AQABAAIAAAAJAPT/AQABAAAAAAAJAPX/AQABAAEAAAAJAPb/AQABAAIAAAAJAPf/AQABAAAAAAAJAPj/AQABAAEAAAAJAPn/AQABAAIAAAAJAPr/AQABAAAAAAAJAPv/AQABAAEAAAAJAPz/AQABAAIAAAAJAP3/AQABAAAAAAAJAP7/AQABAAEAAAAJAP//AQABAAIAAAAQAP//AQAAAAIAAAARAP//AQABAAIAAAASAP//AQABAAIAAAATAP//AQABAAIAAAAUAP//AQABAAIAAAAVAP//AQABAAIAAAAWAP//AQABAAIAAAAXAP//AQABAAIAAAAYAP//AQACAAIAAAAQAP7/AQAAAAIAAAARAP7/AQABAAIAAAASAP7/AQABAAIAAAATAP7/AQABAAIAAAAUAP7/AQABAAIAAAAVAP7/AQABAAIAAAAWAP7/AQABAAIAAAAXAP7/AQABAAIAAAAYAP7/AQACAAIAAAAQAP3/AQAAAAIAAAARAP3/AQABAAIAAAASAP3/AQABAAIAAAATAP3/AQABAAIAAAAUAP3/AQABAAIAAAAVAP3/AQABAAIAAAAWAP3/AQABAAIAAAAXAP3/AQABAAIAAAAYAP3/AQACAAIAAAAQAPz/AQAAAAIAAAARAPz/AQABAAIAAAASAPz/AQABAAIAAAATAPz/AQABAAIAAAAUAPz/AQABAAIAAAAVAPz/AQABAAIAAAAWAPz/AQABAAIAAAAXAPz/AQABAAIAAAAYAPz/AQACAAIAAAAQAPv/AQAAAAIAAAARAPv/AQABAAIAAAASAPv/AQABAAIAAAATAPv/AQABAAIAAAAUAPv/AQABAAIAAAAVAPv/AQABAAIAAAAWAPv/AQABAAIAAAAXAPv/AQABAAIAAAAYAPv/AQACAAIAAAAQAPr/AQAAAAIAAAARAPr/AQABAAIAAAASAPr/AQABAAIAAAATAPr/AQABAAIAAAAUAPr/AQABAAIAAAAVAPr/AQABAAIAAAAWAPr/AQABAAIAAAAXAPr/AQABAAIAAAAYAPr/AQACAAIAAAAQAPn/AQAAAAIAAAARAPn/AQABAAIAAAASAPn/AQABAAIAAAATAPn/AQABAAIAAAAUAPn/AQABAAIAAAAVAPn/AQABAAIAAAAWAPn/AQABAAIAAAAXAPn/AQABAAIAAAAYAPn/AQACAAIAAAAQAPj/AQAAAAIAAAARAPj/AQABAAIAAAASAPj/AQABAAIAAAATAPj/AQABAAIAAAAUAPj/AQABAAIAAAAVAPj/AQABAAIAAAAWAPj/AQABAAIAAAAXAPj/AQABAAIAAAAYAPj/AQACAAIAAAAQAPf/AQAAAAIAAAARAPf/AQABAAIAAAASAPf/AQABAAIAAAATAPf/AQABAAIAAAAUAPf/AQABAAIAAAAVAPf/AQABAAIAAAAWAPf/AQABAAIAAAAXAPf/AQABAAIAAAAYAPf/AQACAAIAAAAQAPb/AQAAAAIAAAARAPb/AQABAAIAAAASAPb/AQABAAIAAAATAPb/AQABAAIAAAAUAPb/AQABAAIAAAAVAPb/AQABAAIAAAAWAPb/AQABAAIAAAAXAPb/AQABAAIAAAAYAPb/AQACAAIAAAAQAPX/AQAAAAIAAAARAPX/AQABAAIAAAASAPX/AQABAAIAAAATAPX/AQABAAIAAAAUAPX/AQABAAIAAAAVAPX/AQABAAIAAAAWAPX/AQABAAIAAAAXAPX/AQABAAIAAAAYAPX/AQACAAIAAAAQAPT/AQAAAAIAAAARAPT/AQABAAIAAAASAPT/AQABAAIAAAATAPT/AQABAAIAAAAUAPT/AQABAAIAAAAVAPT/AQABAAIAAAAWAPT/AQABAAIAAAAXAPT/AQABAAIAAAAYAPT/AQACAAIAAAAQAPP/AQAAAAIAAAARAPP/AQABAAIAAAASAPP/AQABAAIAAAATAPP/AQABAAIAAAAUAPP/AQABAAIAAAAVAPP/AQABAAIAAAAWAPP/AQABAAIAAAAXAPP/AQABAAIAAAAYAPP/AQACAAIAAAAdAP//AQAAAAIAAAAeAP//AQABAAIAAAAfAP//AQABAAIAAAAgAP//AQABAAIAAAAhAP//AQACAAIAAAAdAP7/AQAAAAIAAAAeAP7/AQABAAIAAAAfAP7/AQABAAIAAAAgAP7/AQABAAIAAAAhAP7/AQACAAIAAAAdAP3/AQAAAAIAAAAeAP3/AQABAAIAAAAfAP3/AQABAAIAAAAgAP3/AQABAAIAAAAhAP3/AQACAAIAAAAdAPz/AQAAAAIAAAAeAPz/AQABAAIAAAAfAPz/AQABAAIAAAAgAPz/AQABAAIAAAAhAPz/AQACAAIAAAAdAPv/AQAAAAIAAAAeAPv/AQABAAIAAAAfAPv/AQABAAIAAAAgAPv/AQABAAIAAAAhAPv/AQACAAIAAAAdAPr/AQAAAAIAAAAeAPr/AQABAAIAAAAfAPr/AQABAAIAAAAgAPr/AQABAAIAAAAhAPr/AQACAAIAAAAdAPn/AQAAAAIAAAAeAPn/AQABAAIAAAAfAPn/AQABAAIAAAAgAPn/AQABAAIAAAAhAPn/AQACAAIAAAAdAPj/AQAAAAIAAAAeAPj/AQABAAIAAAAfAPj/AQABAAIAAAAgAPj/AQABAAIAAAAhAPj/AQACAAIAAAAdAPf/AQAAAAIAAAAeAPf/AQABAAIAAAAfAPf/AQABAAIAAAAgAPf/AQABAAIAAAAhAPf/AQACAAIAAAAdAPb/AQAAAAIAAAAeAPb/AQABAAIAAAAfAPb/AQABAAIAAAAgAPb/AQABAAIAAAAhAPb/AQACAAIAAAAdAPX/AQAAAAIAAAAeAPX/AQABAAIAAAAfAPX/AQABAAIAAAAgAPX/AQABAAIAAAAhAPX/AQACAAIAAAAdAPT/AQAAAAIAAAAeAPT/AQABAAIAAAAfAPT/AQABAAIAAAAgAPT/AQABAAIAAAAhAPT/AQACAAIAAAAdAPP/AQAAAAIAAAAeAPP/AQABAAIAAAAfAPP/AQABAAIAAAAgAPP/AQABAAIAAAAhAPP/AQACAAIAAAAdAPL/AQAAAAIAAAAeAPL/AQABAAIAAAAfAPL/AQABAAIAAAAgAPL/AQABAAIAAAAhAPL/AQACAAIAAAAIAPP/AQAAAAIAAAAJAPP/AQABAAIAAAAKAPP/AQABAAIAAAALAPP/AQABAAIAAAAMAPP/AQACAAIAAAAIAPL/AQAAAAIAAAAJAPL/AQABAAIAAAAKAPL/AQABAAIAAAALAPL/AQABAAIAAAAMAPL/AQACAAIAAAAIAPH/AQAAAAIAAAAJAPH/AQABAAIAAAAKAPH/AQABAAIAAAALAPH/AQABAAIAAAAMAPH/AQACAAIAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAEAAAAAAP//AQAAAAIAAAABAP3/AQABAAAAAAABAP7/AQABAAEAAAABAP//AQABAAIAAAACAP3/AQACAAAAAAACAP7/AQACAAEAAAACAP//AQACAAIAAAAAAPr/AQAAAAAAAAAAAPv/AQAAAAEAAAAAAPz/AQAAAAIAAAABAPr/AQABAAAAAAABAPv/AQABAAEAAAABAPz/AQABAAIAAAACAPr/AQACAAAAAAACAPv/AQACAAEAAAACAPz/AQACAAIAAAAAAPf/AQAAAAAAAAAAAPj/AQAAAAEAAAAAAPn/AQAAAAIAAAABAPf/AQABAAAAAAABAPj/AQABAAEAAAABAPn/AQABAAIAAAACAPf/AQACAAAAAAACAPj/AQACAAEAAAACAPn/AQACAAIAAAAAAPT/AQAAAAAAAAAAAPX/AQAAAAEAAAAAAPb/AQAAAAIAAAABAPT/AQABAAAAAAABAPX/AQABAAEAAAABAPb/AQABAAIAAAACAPT/AQACAAAAAAACAPX/AQACAAEAAAACAPb/AQACAAIAAAAoAOv/AQAAAAAAAAAoAOz/AQAAAAEAAAAoAO3/AQAAAAIAAAApAOv/AQABAAAAAAApAOz/AQABAAEAAAApAO3/AQABAAIAAAAqAOv/AQACAAAAAAAqAOz/AQACAAEAAAAqAO3/AQACAAIAAAAoAO7/AQAAAAAAAAAoAO//AQAAAAEAAAAoAPD/AQAAAAIAAAApAO7/AQABAAAAAAApAO//AQABAAEAAAApAPD/AQABAAIAAAAqAO7/AQACAAAAAAAqAO//AQACAAEAAAAqAPD/AQACAAIAAAAoAPH/AQAAAAAAAAAoAPL/AQAAAAEAAAAoAPP/AQAAAAIAAAApAPH/AQABAAAAAAApAPL/AQABAAEAAAApAPP/AQABAAIAAAAqAPH/AQACAAAAAAAqAPL/AQACAAEAAAAqAPP/AQACAAIAAAAoAPT/AQAAAAAAAAAoAPX/AQAAAAEAAAAoAPb/AQAAAAIAAAApAPT/AQABAAAAAAApAPX/AQABAAEAAAApAPb/AQABAAIAAAAqAPT/AQACAAAAAAAqAPX/AQACAAEAAAAqAPb/AQACAAIAAAAoAPf/AQAAAAAAAAAoAPj/AQAAAAEAAAAoAPn/AQAAAAIAAAApAPf/AQABAAAAAAApAPj/AQABAAEAAAApAPn/AQABAAIAAAAqAPf/AQACAAAAAAAqAPj/AQACAAEAAAAqAPn/AQACAAIAAAAoAPr/AQAAAAAAAAAoAPv/AQAAAAEAAAAoAPz/AQAAAAIAAAApAPr/AQABAAAAAAApAPv/AQABAAEAAAApAPz/AQABAAIAAAAqAPr/AQACAAAAAAAqAPv/AQACAAEAAAAqAPz/AQACAAIAAAAoAP3/AQAAAAAAAAAoAP7/AQAAAAEAAAAoAP//AQAAAAIAAAApAP3/AQABAAAAAAApAP7/AQABAAEAAAApAP//AQABAAIAAAAqAP3/AQACAAAAAAAqAP7/AQACAAEAAAAqAP//AQACAAIAAAAAAOv/AQAAAAAAAAAAAOz/AQAAAAEAAAAAAO3/AQAAAAIAAAABAOv/AQABAAAAAAABAOz/AQABAAEAAAABAO3/AQABAAIAAAACAOv/AQACAAAAAAACAOz/AQACAAEAAAACAO3/AQACAAIAAAAAAO7/AQAAAAAAAAAAAO//AQAAAAEAAAAAAPD/AQAAAAIAAAABAO7/AQABAAAAAAABAO//AQABAAEAAAABAPD/AQABAAIAAAACAO7/AQACAAAAAAACAO//AQACAAEAAAACAPD/AQACAAIAAAAAAPH/AQAAAAAAAAAAAPL/AQAAAAEAAAAAAPP/AQAAAAIAAAABAPH/AQABAAAAAAABAPL/AQABAAEAAAABAPP/AQABAAIAAAACAPH/AQACAAAAAAACAPL/AQACAAEAAAACAPP/AQACAAIAAAAIAPD/AQAAAAIAAAAJAPD/AQABAAIAAAAKAPD/AQABAAIAAAALAPD/AQABAAIAAAAMAPD/AQACAAIAAAAIAO//AQAAAAIAAAAJAO//AQABAAIAAAAKAO//AQABAAIAAAALAO//AQABAAIAAAAMAO//AQACAAIAAAAIAO7/AQAAAAIAAAAJAO7/AQABAAIAAAAKAO7/AQABAAIAAAALAO7/AQABAAIAAAAMAO7/AQACAAIAAAAIAO3/AQAAAAIAAAAJAO3/AQABAAIAAAAKAO3/AQABAAIAAAALAO3/AQABAAIAAAAMAO3/AQACAAIAAAAIAOz/AQAAAAIAAAAJAOz/AQABAAIAAAAKAOz/AQABAAIAAAALAOz/AQABAAIAAAAMAOz/AQACAAIAAAAIAOv/AQAAAAIAAAAJAOv/AQABAAIAAAAKAOv/AQABAAIAAAALAOv/AQABAAIAAAAMAOv/AQACAAIAAAAQAPL/AQAAAAIAAAARAPL/AQABAAIAAAASAPL/AQABAAIAAAATAPL/AQABAAIAAAAUAPL/AQABAAIAAAAVAPL/AQABAAIAAAAWAPL/AQABAAIAAAAXAPL/AQABAAIAAAAYAPL/AQACAAIAAAAQAPH/AQAAAAIAAAARAPH/AQABAAIAAAASAPH/AQABAAIAAAATAPH/AQABAAIAAAAUAPH/AQABAAIAAAAVAPH/AQABAAIAAAAWAPH/AQABAAIAAAAXAPH/AQABAAIAAAAYAPH/AQACAAIAAAAQAPD/AQAAAAIAAAARAPD/AQABAAIAAAASAPD/AQABAAIAAAATAPD/AQABAAIAAAAUAPD/AQABAAIAAAAVAPD/AQABAAIAAAAWAPD/AQABAAIAAAAXAPD/AQABAAIAAAAYAPD/AQACAAIAAAAQAO//AQAAAAIAAAARAO//AQABAAIAAAASAO//AQABAAIAAAATAO//AQABAAIAAAAUAO//AQABAAIAAAAVAO//AQABAAIAAAAWAO//AQABAAIAAAAXAO//AQABAAIAAAAYAO//AQACAAIAAAAQAO7/AQAAAAIAAAARAO7/AQABAAIAAAASAO7/AQABAAIAAAATAO7/AQABAAIAAAAUAO7/AQABAAIAAAAVAO7/AQABAAIAAAAWAO7/AQABAAIAAAAXAO7/AQABAAIAAAAYAO7/AQACAAIAAAAQAO3/AQAAAAIAAAARAO3/AQABAAIAAAASAO3/AQABAAIAAAATAO3/AQABAAIAAAAUAO3/AQABAAIAAAAVAO3/AQABAAIAAAAWAO3/AQABAAIAAAAXAO3/AQABAAIAAAAYAO3/AQACAAIAAAAQAOz/AQAAAAIAAAARAOz/AQABAAIAAAASAOz/AQABAAIAAAATAOz/AQABAAIAAAAUAOz/AQABAAIAAAAVAOz/AQABAAIAAAAWAOz/AQABAAIAAAAXAOz/AQABAAIAAAAYAOz/AQACAAIAAAAQAOv/AQAAAAIAAAARAOv/AQABAAIAAAASAOv/AQABAAIAAAATAOv/AQABAAIAAAAUAOv/AQABAAIAAAAVAOv/AQABAAIAAAAWAOv/AQABAAIAAAAXAOv/AQABAAIAAAAYAOv/AQACAAIAAAAdAPH/AQAAAAIAAAAeAPH/AQABAAIAAAAfAPH/AQABAAIAAAAgAPH/AQABAAIAAAAhAPH/AQACAAIAAAAdAPD/AQAAAAIAAAAeAPD/AQABAAIAAAAfAPD/AQABAAIAAAAgAPD/AQABAAIAAAAhAPD/AQACAAIAAAAdAO//AQAAAAIAAAAeAO//AQABAAIAAAAfAO//AQABAAIAAAAgAO//AQABAAIAAAAhAO//AQACAAIAAAAdAO7/AQAAAAIAAAAeAO7/AQABAAIAAAAfAO7/AQABAAIAAAAgAO7/AQABAAIAAAAhAO7/AQACAAIAAAAdAO3/AQAAAAIAAAAeAO3/AQABAAIAAAAfAO3/AQABAAIAAAAgAO3/AQABAAIAAAAhAO3/AQACAAIAAAAdAOz/AQAAAAIAAAAeAOz/AQABAAIAAAAfAOz/AQABAAIAAAAgAOz/AQABAAIAAAAhAOz/AQACAAIAAAAdAOv/AQAAAAIAAAAeAOv/AQABAAIAAAAfAOv/AQABAAIAAAAgAOv/AQABAAIAAAAhAOv/AQACAAIAAAA=")
tile_set = SubResource("TileSet_r4obp")

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -100

[node name="Sky" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
position = Vector2(3381, -1632)
scale = Vector2(5.44844, 4.53056)
texture = ExtResource("8_tap5r")

[node name="TreesLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -5
position = Vector2(0, 25)
motion_scale = Vector2(0.8, 0.8)

[node name="Trees" type="TextureRect" parent="ParallaxBackground/TreesLayer"]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
custom_minimum_size = Vector2(4000, 0)
offset_left = -103.0
offset_top = -878.0
offset_right = 6865.0
offset_bottom = -30.0
texture = ExtResource("9_7aje4")
stretch_mode = 1

[node name="BlurShader" type="TextureRect" parent="ParallaxBackground/TreesLayer/Trees"]
material = SubResource("ShaderMaterial_v80t5")
layout_mode = 0
offset_left = 1.0
offset_top = -12.0
offset_right = 6977.0
offset_bottom = 849.0
texture = SubResource("GradientTexture2D_t8plu")

[connection signal="body_entered" from="Hazards_Container/Kill_Plane" to="." method="_on_kill_plane_body_entered"]
